<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home" />
        <item
            android:id="@+id/indexes"
            android:title="@string/all_symbols" />
        <item
            android:id="@+id/favourites"
            android:title="@string/favourites" />
        <item
            android:id="@+id/companies"
            android:title="@string/companies" />
        <item
            android:id="@+id/calculator"
            android:title="@string/calculator" />
        <item
            android:id="@+id/indexesPL"
            android:title="@string/PLindexes" />
        <item
            android:id="@+id/chartFragment"
            android:title="Chart" />


    </group>
</menu>