<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginStart="3dp"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="3dp"
    android:layout_marginEnd="3dp"
    android:layout_marginRight="3dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    android:padding="8dp"
    android:paddingStart="2dp"
    android:paddingLeft="2dp"
    android:paddingTop="2dp"
    android:paddingEnd="2dp"
    android:paddingRight="2dp"
    android:paddingBottom="2dp">


    <ImageView
        android:id="@+id/newsImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/news_img"
        android:padding="3dp"
        android:paddingStart="3dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingEnd="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/newsImg"
        android:text="@string/header"
        android:textAlignment="textStart"
        android:textColor="@color/material_on_background_emphasis_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/newsImg"
        android:text="@string/summary"
        android:textColor="@color/material_on_background_emphasis_medium" />

    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="3dp"
        android:text="source" />
</RelativeLayout>