<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculator">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="136dp"
        android:layout_height="32dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:entries="@array/skroty_walut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/textViewTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner2" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="136dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:entries="@array/skroty_walut"
        app:layout_constraintBottom_toBottomOf="@+id/spinner2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintBottom_toTopOf="@+id/spinner1"
        app:layout_constraintStart_toStartOf="@+id/spinner1" />

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="366dp"
        android:layout_height="46dp"
        android:layout_marginBottom="160dp"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSwitch" />

    <ImageButton
        android:id="@+id/buttonSwitch"
        android:layout_width="84dp"
        android:layout_height="33dp"
        android:src="@android:drawable/stat_notify_sync_noanim"
        app:layout_constraintBottom_toBottomOf="@+id/spinner1"
        app:layout_constraintEnd_toStartOf="@+id/spinner2"
        app:layout_constraintStart_toEndOf="@+id/spinner1"
        app:layout_constraintTop_toTopOf="@+id/spinner2" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="332dp"
        android:layout_height="53dp"
        android:layout_marginBottom="60dp"
        android:text="RESULT"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConvert" />

    <EditText
        android:id="@+id/inputAmount"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="Enter amount"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>